# STM32F7-USB-host-ME906-lwIP-MQTT

./: .travis.yml  CMakeLists.txt  HuaweiMe906.cpp  HuaweiMe906.hpp  PpposManager.cpp  PpposManager.hpp  README.md  STM32F7xx_HAL_Driver-configuration.h  distortosConfiguration.cmake  lwIP-configuration.h  main.cpp  openHuaweiMe906.cpp  openHuaweiMe906.hpp
CMSIS-RTOS2/: CMSIS-RTOS2-sources.cmake
CMSIS-RTOS2-integration/: CMSIS-RTOS2-sources.cmake  errorCodeToOsStatus.cpp  errorCodeToOsStatus.hpp  osDelay.cpp  osMessageQueue.cpp  osThread.cpp
CMSIS-RTOS2-integration/include/: cmsis_os.h
STM32F7xx_HAL_Driver/: STM32F7xx_HAL_Driver-sources.cmake
STM32F7xx_HAL_Driver-integration/: HAL_Delay.cpp  STM32F7xx_HAL_Driver-sources.cmake
STM32F7xx_HAL_Driver-integration/include/: stm32f7xx_hal_conf.h
STM32F7xx_HAL_Driver/Src/: stm32f7xx_ll_usb.c
STM32_USB_Host_Library/: STM32_USB_Host_Library-sources.cmake
STM32_USB_Host_Library-integration/: STM32_USB_Host_Library-sources.cmake  usbHostLog.cpp  usbh_conf.c
STM32_USB_Host_Library-integration/include/: usbh_conf.h
STM32_USB_Host_Library/Core/Src/: usbh_core.c
board/: AlternateFunctionPinInitializer.hpp  STM32F7-USB-host-ME906-lwIP-MQTT-sources.cmake  initializeStreams.cpp
configurations/ST_32F746GDISCOVERY/: distortosConfiguration.cmake
configurations/ST_NUCLEO-F767ZI/: distortosConfiguration.cmake
lwIP-integration/: lwIP-sources.cmake  lwipCriticalSection.cpp  lwipErrorToErrorCode.cpp  lwipMailbox.cpp  lwipMiscellaneous.cpp  lwipMutex.cpp  lwipSemaphore.cpp  lwipTcpipCoreLocking.cpp  lwipTime.cpp
lwIP-integration/include/: lwipErrorToErrorCode.hpp  lwipopts.h
lwIP-integration/include/arch/: cc.h  sys_arch.h
